Refactor: Remove unused imports